force-app/main/default/objects/Skill_Registration__c/Skill_Registration__c.object-meta.xml
<CustomObject>
    <label>Skill Registration</label>
    <nameField>
        <displayFormat>SR-{00000000}</displayFormat>
        <label>Skill Registration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Skills Registration</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>