force-app/main/default/objects/Skill_Registration__c/fields/ActiveDate__c.field-meta.xml
<CustomField>
    <fullName>ActiveDate__c</fullName>
    <label>Active Date</label>
    <type>Date</type>
</CustomField>