force-app/main/default/objects/Skill_Registration__c/fields/Assign_skill_to_user__c.field-meta.xml
<CustomField>
    <fullName>Assign_skill_to_user__c</fullName>
    <label>Assign Skill to Auditor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>