force-app/main/default/objects/Skill_Registration__c/fields/AuditorDailyRate__c.field-meta.xml
<CustomField>
    <fullName>AuditorDailyRate__c</fullName>
    <label>Auditor Daily Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>