force-app/main/default/objects/Skill_Registration__c/fields/AuditorTravelCost__c.field-meta.xml
<CustomField>
    <fullName>AuditorTravelCost__c</fullName>
    <label>Auditor Travel Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>