force-app/main/default/objects/Skill_Registration__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact or User is required for registering an user for a Skill</description>
    <label>Contact</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Auditor Value does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>Contact.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Auditor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Skills Registration</relationshipLabel>
    <relationshipName>Skills_Registration</relationshipName>
    <type>Lookup</type>
</CustomField>