force-app/main/default/objects/Skill_Registration__c/fields/DMS_Training_ID__c.field-meta.xml
<CustomField>
    <fullName>DMS_Training_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>DMS Training ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>