force-app/main/default/objects/Skill_Registration__c/fields/DMSDept__c.field-meta.xml
<CustomField>
    <fullName>DMSDept__c</fullName>
    <label>DMS Dept</label>
    <length>255</length>
    <type>Text</type>
</CustomField>