force-app/main/default/objects/Skill_Registration__c/fields/EngagementType__c.field-meta.xml
<CustomField>
    <fullName>EngagementType__c</fullName>
    <label>Engagement Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Evaluation</fullName>
            </value>
            <value>
                <fullName>Surveillance</fullName>
            </value>
            <value>
                <fullName>Re-evaluation</fullName>
            </value>
            <value>
                <fullName>Follow-up</fullName>
            </value>
            <value>
                <fullName>Scope expansion</fullName>
            </value>
            <value>
                <fullName>Unannounced audits</fullName>
            </value>
            <value>
                <fullName>Farm &amp; Supply Chain</fullName>
            </value>
            <value>
                <fullName>Farm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>