force-app/main/default/objects/Skill_Registration__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Skills Registration</relationshipLabel>
    <relationshipName>Skills_Registration</relationshipName>
    <type>Lookup</type>
</CustomField>