force-app/main/default/objects/Skill_Registration__c/fields/SponsorName__c.field-meta.xml
<CustomField>
    <fullName>SponsorName__c</fullName>
    <label>Sponsor Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>