force-app/main/default/objects/Skill_Registration__c/fields/WitnessAuditNotes__c.field-meta.xml
<CustomField>
    <fullName>WitnessAuditNotes__c</fullName>
    <label>Witness Audit Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>