force-app/main/default/objects/Skill_Registration__c/validationRules/Required_field_either_contact_or_user.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_field_either_contact_or_user</fullName>
    <active>true</active>
    <errorConditionFormula>OR( 
   AND( NOT(ISBLANK( Contact__c )) ,  NOT( ISBLANK( User__c ) ) ) , 
   AND( ISBLANK( Contact__c ) , ISBLANK( User__c ) ) 
)</errorConditionFormula>
    <errorMessage>Please register skill against either USER or CONTACT field.</errorMessage>
</ValidationRule>